Fix: Fix horizontal scroll at body

--- a/components/page/header/header.module.css
+++ b/components/page/header/header.module.css
@@ -1,9 +1,3 @@
-.container {
-	margin-top: -1px;
-	margin-left: -1px;
-	margin-right: -1px;
-}
-
 .body {
 	display: flex;
 	padding: 8px;
